--- a/src/papeleriaconant/Ticket.form
+++ b/src/papeleriaconant/Ticket.form
@@ -46,7 +46,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="88" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="impriirTicketBtn" min="-2" pref="124" max="-2" attributes="0"/>
+                      <Component id="okBtn" min="-2" pref="124" max="-2" attributes="0"/>
                       <Component id="jScrollPane1" min="-2" pref="436" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="97" max="32767" attributes="0"/>
@@ -61,7 +61,7 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="412" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                  <Component id="impriirTicketBtn" min="-2" max="-2" attributes="0"/>
+                  <Component id="okBtn" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -91,12 +91,12 @@
             <Property name="text" type="java.lang.String" value="Su ticket"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="impriirTicketBtn">
+        <Component class="javax.swing.JButton" name="okBtn">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Imprimir ticket"/>
+            <Property name="text" type="java.lang.String" value="Ok"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="impriirTicketBtnActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="okBtnActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
